@@ -1,0 +1,316 @@
+<?xml version="1.0"?>
+<metacity_theme>
+<info>
+  <name>Simple</name>
+  <author>Tuomas Kuosmanen &lt;tigert@ximian.com&gt;</author>
+  <copyright>&#194; Tuomas Kuosmanen, 2002, based on Atlanta theme by Havoc.</copyright>
+  <date>April, 2002</date>
+  <description>Default GNOME window theme</description>
+</info>
+
+<frame_geometry name="normal">
+  <distance name="left_width" value="4"/>
+  <distance name="right_width" value="4"/>
+  <distance name="bottom_height" value="4"/>
+  <distance name="left_titlebar_edge" value="2"/>
+  <distance name="right_titlebar_edge" value="2"/>
+  <distance name="button_width" value="16"/>
+  <distance name="button_height" value="16"/>
+  <distance name="title_vertical_pad" value="0"/>
+  <border name="title_border" left="1" right="1" top="2" bottom="2"/>
+  <border name="button_border" left="1" right="1" top="0" bottom="0"/>
+</frame_geometry>
+
+<!-- strip borders off the normal geometry -->
+<frame_geometry name="normal_small_borders" parent="normal">
+  <distance name="left_width" value="0"/>
+  <distance name="right_width" value="0"/>
+  <distance name="bottom_height" value="0"/>
+  <distance name="left_titlebar_edge" value="0"/>
+  <distance name="right_titlebar_edge" value="0"/>
+</frame_geometry>
+
+<frame_geometry name="utility" title_scale="xx-small">
+  <distance name="left_width" value="3"/>
+  <distance name="right_width" value="3"/>
+  <distance name="bottom_height" value="4"/>
+  <distance name="left_titlebar_edge" value="3"/>
+  <distance name="right_titlebar_edge" value="3"/>
+  <distance name="button_width" value="16"/>
+  <distance name="button_height" value="16"/>
+  <distance name="title_vertical_pad" value="1"/>
+  <border name="title_border" left="3" right="4" top="3" bottom="3"/>
+  <border name="button_border" left="0" right="0" top="0" bottom="0"/>
+</frame_geometry>
+
+<frame_geometry name="border" has_title="false">
+  <distance name="left_width" value="4"/>
+  <distance name="right_width" value="4"/>
+  <distance name="bottom_height" value="4"/>
+  <distance name="left_titlebar_edge" value="0"/>
+  <distance name="right_titlebar_edge" value="0"/>
+  <distance name="button_width" value="0"/>
+  <distance name="button_height" value="0"/>
+  <distance name="title_vertical_pad" value="4"/>
+  <border name="title_border" left="0" right="0" top="0" bottom="0"/>
+  <border name="button_border" left="0" right="0" top="0" bottom="0"/>
+</frame_geometry>
+
+<!-- define constants -->
+<constant name="ArrowWidth" value="8"/>
+<constant name="ArrowHeight" value="4"/>
+<constant name="ButtonIPad" value="4"/>
+<constant name="ThickLineWidth" value="3"/>
+<constant name="IconTitleSpacing" value="6"/>
+<constant name="SpacerWidth" value="2"/>
+<constant name="SpacerHeight" value="10"/>
+
+<!-- Buttons -->
+
+<draw_ops name="button_pressed_bg">
+  <rectangle color="gtk:light[NORMAL]" filled="true"
+             x="1" y="1" width="width" height="height"/>
+  <rectangle color="gtk:dark[NORMAL]" filled="true"
+             x="0" y="0" width="width - 1" height="height - 1"/>
+  <rectangle color="blend/#000000/gtk:bg[NORMAL]/0.9" filled="true"
+             x="1" y="1" width="width - 2" height="height - 2"/>
+  <!-- gtk_box state="active" shadow="out" x="0" y="0" width="width" height="height"/ -->
+</draw_ops>
+
+<draw_ops name="menu_button">
+  <icon  x="1"
+         y="1"
+         width="width-2" height="height-2"/>
+</draw_ops>
+
+<draw_ops name="menu_button_pressed">
+  <include name="menu_button"/>
+</draw_ops>
+
+<draw_ops name="minimize_button">
+  <image filename="minimize.png" x="0" y="0" width="object_width" height="object_height"/>
+</draw_ops>
+
+<draw_ops name="minimize_button_pressed">
+  <include name="button_pressed_bg"/>
+  <include name="minimize_button"/>
+</draw_ops>
+
+<draw_ops name="maximize_button">
+  <image filename="maximize.png" x="0" y="0" width="object_width" height="object_height"/>
+</draw_ops>
+
+<draw_ops name="maximize_button_pressed">
+  <include name="button_pressed_bg"/>
+  <include name="maximize_button"/>
+</draw_ops>
+
+<draw_ops name="restore_button">
+  <image filename="maximized.png" x="0" y="0" width="object_width" height="object_height"/>
+</draw_ops>
+
+<draw_ops name="restore_button_pressed">
+  <include name="button_pressed_bg"/>
+  <include name="restore_button"/>
+</draw_ops>
+
+<draw_ops name="close_button">
+  <image filename="close.png" x="0" y="0" width="object_width" height="object_height"/>
+</draw_ops>
+
+<draw_ops name="close_button_pressed">
+  <include name="button_pressed_bg"/>
+  <include name="close_button"/>
+</draw_ops>
+
+<draw_ops name="outer_bevel">
+  <rectangle color="#000000"
+             x="0" y="0" width="width" height="height" filled="true"/>
+  <rectangle color="gtk:bg[NORMAL]"
+             x="1" y="1" width="width-2" height="height-2" filled="true"/>
+  <line color="gtk:light[NORMAL]"
+        x1="1" y1="1" x2="1" y2="height-3"/>
+  <line color="gtk:light[NORMAL]"
+        x1="1" y1="1" x2="width-3" y2="1"/>
+  <line color="gtk:dark[NORMAL]"
+        x1="width-2" y1="2" x2="width-2" y2="height-2"/>
+  <line color="gtk:dark[NORMAL]"
+        x1="2" y1="height-2" x2="width-3" y2="height-2"/>        
+</draw_ops>
+
+<draw_ops name="blank">
+<!-- nothing -->
+</draw_ops>
+
+<draw_ops name="focus_outline">
+  <rectangle color="gtk:dark[NORMAL]"
+             x="left_width-1" y="top_height-1"
+             width="width-left_width-right_width+1"
+             height="height-top_height-bottom_height+1"/>
+</draw_ops>
+
+<draw_ops name="focus_background">
+  <include name="outer_bevel"/>
+</draw_ops>
+
+<draw_ops name="title_tile">
+  <line color="gtk:bg[SELECTED]" x1="0" y1="0" x2="width" y2="0"/>
+  <line color="blend/gtk:bg[SELECTED]/#000000/0.1" x1="0" y1="1" x2="width" y2="1"/>
+</draw_ops>
+
+<draw_ops name="title_tile_unfocused">
+  <line color="blend/gtk:bg[NORMAL]/#000000/0.1" x1="0" y1="0" x2="width" y2="0"/>
+  <line color="blend/gtk:bg[NORMAL]/#000000/0.2" x1="0" y1="1" x2="width" y2="1"/>
+</draw_ops>
+
+<draw_ops name="title_bg">
+  <tile name="title_tile" tile_width="width" tile_height="2" x="0" y="0" width="width" height="height"/>
+  <rectangle color="blend/gtk:bg[SELECTED]/#000000/0.6" filled="false" x="0" y="0" width="width-1" height="height-1"/>
+  <rectangle color="blend/#000000/gtk:bg[NORMAL]/0.5" filled="true" x="0" y="0" width="1" height="1"/>
+  <rectangle color="blend/#000000/gtk:bg[NORMAL]/0.5" filled="true" x="width-1" y="0" width="1" height="1"/>
+  <rectangle color="blend/#000000/gtk:bg[NORMAL]/0.5" filled="true" x="0" y="height-1" width="1" height="1"/>
+  <rectangle color="blend/#000000/gtk:bg[NORMAL]/0.5" filled="true" x="width-1" y="height-1" width="1" height="1"/>
+</draw_ops>
+
+<draw_ops name="title_bg_unfocused">
+  <tile name="title_tile_unfocused" tile_width="width" tile_height="2" x="0" y="0" width="width-1" height="height-1"/>
+  <rectangle color="blend/#000000/gtk:bg[NORMAL]/0.7" filled="false" x="0" y="0" width="width-1" height="height-1"/>
+  <rectangle color="blend/#000000/gtk:bg[NORMAL]/0.8" filled="true" x="0" y="0" width="1" height="1"/>
+  <rectangle color="blend/#000000/gtk:bg[NORMAL]/0.8" filled="true" x="width-1" y="0" width="1" height="1"/>
+  <rectangle color="blend/#000000/gtk:bg[NORMAL]/0.8" filled="true" x="0" y="height-1" width="1" height="1"/>
+  <rectangle color="blend/#000000/gtk:bg[NORMAL]/0.8" filled="true" x="width-1" y="height-1" width="1" height="1"/>
+</draw_ops>
+
+<draw_ops name="title_text_focused">
+  <clip x="0" y="0" width="width-SpacerWidth" height="height"/>
+  <title color="blend/gtk:fg[SELECTED]/#000000/0.7"
+         x="(0 `max` (width-title_width-mini_icon_width-IconTitleSpacing)) / 2 + mini_icon_width + IconTitleSpacing + 1"
+         y="((height - title_height) / 2) `max` 0 + 1"/>
+  <title color="gtk:fg[SELECTED]"
+         x="(0 `max` (width-title_width-mini_icon_width-IconTitleSpacing)) / 2 + mini_icon_width + IconTitleSpacing"
+         y="((height - title_height) / 2) `max` 0"/>
+</draw_ops>
+
+<draw_ops name="title_text">
+  <clip x="0" y="0" width="width-SpacerWidth" height="height"/>
+  <title color="blend/gtk:dark[NORMAL]/#000000/0.5"
+         x="(0 `max` (width-title_width-mini_icon_width-IconTitleSpacing)) / 2 + mini_icon_width + IconTitleSpacing"
+         y="((height - title_height) / 2) `max` 0"/>
+</draw_ops>
+
+<draw_ops name="title_normal">
+  <include name="title_bg_unfocused"/>
+  <include name="title_text"/>
+</draw_ops>
+
+<draw_ops name="title_focused">
+  <include name="title_bg"/>
+  <include name="title_text_focused"/>
+</draw_ops>
+
+<draw_ops name="title_utility">
+  <include name="title_text"/>
+</draw_ops>
+
+<draw_ops name="title_utility_focused">
+  <include name="title_bg"/>
+  <include name="title_text_focused"/>
+</draw_ops>
+
+<frame_style name="normal_unfocused" geometry="normal">
+  <piece position="entire_background" draw_ops="outer_bevel"/>
+  <piece position="title" draw_ops="title_normal"/>
+
+  <!-- we don't specify for prelight, so normal is used -->
+  <button function="close" state="normal" draw_ops="close_button"/>
+  <button function="close" state="pressed" draw_ops="close_button_pressed"/>
+  <button function="minimize" state="normal" draw_ops="minimize_button"/>
+  <button function="minimize" state="pressed" draw_ops="minimize_button_pressed"/>
+  <button function="maximize" state="normal" draw_ops="maximize_button"/>
+  <button function="maximize" state="pressed" draw_ops="maximize_button_pressed"/>
+  <button function="menu" state="normal" draw_ops="menu_button"/>
+  <button function="menu" state="pressed" draw_ops="menu_button_pressed"/>
+</frame_style>
+
+<frame_style name="normal_focused" geometry="normal" parent="normal_unfocused">
+  <piece position="entire_background" draw_ops="focus_background"/>
+  <piece position="title" draw_ops="title_focused"/>
+</frame_style>
+
+<frame_style name="shaded_focused" geometry="normal" parent="normal_unfocused">
+  <piece position="title" draw_ops="title_focused"/>
+</frame_style>
+
+<frame_style name="maximized_unfocused" geometry="normal_small_borders" parent="normal_unfocused">
+  <piece position="entire_background" draw_ops="blank"/>
+  <button function="maximize" state="normal" draw_ops="restore_button"/>
+  <button function="maximize" state="pressed" draw_ops="restore_button_pressed"/>
+</frame_style>
+
+<frame_style name="maximized_focused" geometry="normal_small_borders" parent="normal_focused">
+  <piece position="entire_background" draw_ops="focus_outline"/>
+  <button function="maximize" state="normal" draw_ops="restore_button"/>
+  <button function="maximize" state="pressed" draw_ops="restore_button_pressed"/>
+</frame_style>
+
+<frame_style name="utility_unfocused" geometry="utility" parent="normal_unfocused">
+  <piece position="title" draw_ops="title_utility"/>
+</frame_style>
+
+<frame_style name="utility_focused" geometry="utility" parent="normal_focused">
+  <piece position="title" draw_ops="title_utility_focused"/>
+</frame_style>
+
+<frame_style name="border" geometry="border" parent="normal_unfocused">
+  <piece position="entire_background" draw_ops="outer_bevel"/>
+  <piece position="title" draw_ops="blank"/>
+</frame_style>
+
+<frame_style_set name="normal">
+<frame focus="yes" state="normal" resize="both" style="normal_focused"/>
+<frame focus="no" state="normal" resize="both" style="normal_unfocused"/>
+<frame focus="yes" state="maximized" style="maximized_focused"/>
+<frame focus="no" state="maximized" style="maximized_unfocused"/>
+<frame focus="yes" state="shaded" style="shaded_focused"/>
+<frame focus="no" state="shaded" style="normal_unfocused"/>
+<frame focus="yes" state="maximized_and_shaded" style="maximized_focused"/>
+<frame focus="no" state="maximized_and_shaded" style="maximized_unfocused"/>
+</frame_style_set>
+
+<frame_style_set name="utility" parent="normal">
+<frame focus="yes" state="normal" resize="both" style="utility_focused"/>
+<frame focus="no" state="normal" resize="both" style="utility_unfocused"/>
+<!-- this is a bunch of crack since utility windows shouldn't be maximized -->
+<frame focus="yes" state="maximized" style="utility_focused"/>
+<frame focus="no" state="maximized" style="utility_unfocused"/>
+<frame focus="yes" state="shaded" style="utility_focused"/>
+<frame focus="no" state="shaded" style="utility_unfocused"/>
+<frame focus="yes" state="maximized_and_shaded" style="utility_focused"/>
+<frame focus="no" state="maximized_and_shaded" style="utility_unfocused"/>
+</frame_style_set>
+
+<frame_style_set name="border" parent="normal">
+<frame focus="yes" state="normal" resize="both" style="border"/>
+<frame focus="no" state="normal" resize="both" style="border"/>
+<!-- this is a bunch of crack since utility windows shouldn't be maximized -->
+<frame focus="yes" state="maximized" style="utility_focused"/>
+<frame focus="no" state="maximized" style="utility_unfocused"/>
+<frame focus="yes" state="shaded" style="utility_focused"/>
+<frame focus="no" state="shaded" style="utility_unfocused"/>
+<frame focus="yes" state="maximized_and_shaded" style="utility_focused"/>
+<frame focus="no" state="maximized_and_shaded" style="utility_unfocused"/>
+</frame_style_set>
+
+<window type="normal" style_set="normal"/>
+<window type="dialog" style_set="normal"/>
+<window type="modal_dialog" style_set="normal"/>
+<window type="menu" style_set="normal"/>
+<window type="utility" style_set="utility"/>
+<window type="border" style_set="border"/>
+
+<menu_icon function="close" state="normal" draw_ops="close_button"/>
+<menu_icon function="maximize" state="normal" draw_ops="maximize_button"/>
+<menu_icon function="unmaximize" state="normal" draw_ops="restore_button"/>
+<menu_icon function="minimize" state="normal" draw_ops="minimize_button"/>
+
+</metacity_theme>
